[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "railforge-ai"
version = "0.1.0"
description = "Railway route generator prototype for Trainz/TransDEM"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "RailForge AI" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
railforge = "railforge.cli:main"

[tool.setuptools.packages.find]
include = ["railforge*"]

[tool.setuptools.package-data]
railforge = ["data/routes/*.json"]
